creusot/tests/should_fail/prusti/partial_zombie/struct.stderr
error[creusot]: binary operation `==` cannot be applied to type `Test<'post, std::boxed::Box<u32>, creusot_contracts::prusti::Zombie<std::boxed::Box<u32>>>` since it doesn't implement `SnapEq`
  --> struct.rs:13:11
   |
13 | #[ensures(x == x)]
   |           ^

error: aborting due to previous error

